mobilogram binning by number of scgutans.